# payload-dumper

./: README.md  pyproject.toml
.github/workflows/: run.yml
docs/: README.zh-CN.md
src/payload_dumper/: __init__.py  dumper.py  future_util.py  http_file.py  update_metadata.proto  update_metadata_pb2.py  update_metadata_pb2.pyi  ziputil.py
src/payload_dumper/mtio/: __init__.py  __main__.py  _unix.py  _windows.py
